# panel-cli-

./: .prettierrc  api.py  cli.py  docker_manager.py  helpers.py  instructions.txt  nginx_manager.py  pyproject.toml  site_manager.py  ssl_manager.py
helpers/: site.py
old/: api.py  cli.py  docker_manager.py  instructions.txt  nginx_manager.py  site_manager.py  ssl_manager.py
panel/: cli.py  constants.py  instructions.txt  logger.py  site_manager.py
panel/helpers/: site.py  system.py
panel/templates/docker/: node.yml  static.yml
panel/templates/nginx/: proxy.conf  static.conf
templates/docker/: node-compose.yml  node.yml  postgres.yml
templates/nginx/: proxy.conf  static.conf
