[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "panel"
version = "0.1.0"

dependencies = [
    "typer",
    "jinja2"
]

[project.scripts]
panel = "panel.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["panel*"]

[tool.setuptools.package-data]
panel = ["templates/nginx/*.conf"]